[package]
name = "twitch-client-cli"
version = "0.1.1"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 4

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
graphql_client = { git = "https://github.com/graphql-rust/graphql-client" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.1", features = ["process", "fs", "rt", "macros"] }
anyhow = { version = "1.0" }
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ["crossterm"] }
